Converted to use AIOHTTP instead of flask and added splash screen

--- a/essential_mm/static/index.html
+++ b/essential_mm/static/index.html
@@ -6,14 +6,13 @@
     <meta charset="UTF-8">
     <title>MM</title>
     <script src="jquery-3.1.1.min.js"></script>
+    <script src="jquery.shuffleLetters.js"></script>
     <script src="index.js"></script>
 
 </head>
 <body>
 <div id="ul">
-    Sunny Day Today!<br/>
-    <img src="sun.png" width="80px" height="80px"><br/>
-    Current: 63&deg High: 74&deg
+
 </div>
 
 <div id="ur">
@@ -29,11 +28,10 @@
 </div>
 
 <div id="center">
-
+Essential Magic Mirror...
 </div>
 <div id="footer">
 
-    Some inspirational quaote or message of the day goes down here!
 </div>
 </body>
 </html>
